seo meta tags and preview for sharing

--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brian Whisler -- Portfolio</title>
+    <meta name="title" content="Brian Whisler -- Portfolio" />
+    <meta name="description" content="Full Stack Web Developer" />
+  
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://spinda.dev" />
+    <meta property="og:title" content="Brian Whisler -- Portfolio" />
+    <meta property="og:description" content="Portfolio page for Brian Whisler | Fullstack Web Developer" />
+    <meta property="og:image" content="https://spinda.dev/preview.png" />
+    <meta property="og:image:width" content="878" />
+    <meta property="og:image:height" content="1010" />
+  
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://spinda.dev" />
+    <meta property="twitter:title" content="The Roost" />
+    <meta property="twitter:description" content="Portfolio page for Brian Whisler | Fullstack Web Developer" />
+    <meta property="twitter:image" content="https://spinda.dev/preview.png" />
+    <meta name="twitter:label1" content="Developed By" />
+    <meta name="twitter:data1" content="Brian Whisler" />
   </head>
   <body>
     <div id="root"></div>
